--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,18 @@
+alembic==1.2.1
 Click==7.0
 Flask==1.1.1
+Flask-Admin==1.5.4
 Flask-Login==0.4.1
+Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 itsdangerous==1.1.0
 Jinja2==2.10.1
+Mako==1.1.0
 MarkupSafe==1.1.1
+python-dateutil==2.8.0
+python-editor==1.0.4
+six==1.12.0
 SQLAlchemy==1.3.8
 Werkzeug==0.15.6
 WTForms==2.2.1
