--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,6 @@
 alembic==1.2.1
+atomicwrites==1.3.0
+attrs==19.3.0
 Click==7.0
 Flask==1.1.1
 Flask-Admin==1.5.4
@@ -6,13 +8,22 @@ Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
+importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.10.1
 Mako==1.1.0
 MarkupSafe==1.1.1
+more-itertools==7.2.0
+packaging==19.2
+pluggy==0.13.0
+py==1.8.0
+pyparsing==2.4.2
+pytest==5.2.1
 python-dateutil==2.8.0
 python-editor==1.0.4
 six==1.12.0
 SQLAlchemy==1.3.8
+wcwidth==0.1.7
 Werkzeug==0.15.6
 WTForms==2.2.1
+zipp==0.6.0
