--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Flask-Admin==1.5.4
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
 Flask-SQLAlchemy==2.4.0
+Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 importlib-metadata==0.23
 itsdangerous==1.1.0
