--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
