--- a/requirements.txt
+++ b/requirements.txt
@@ -6,9 +6,11 @@ Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Login==0.4.1
 Flask-Migrate==2.5.2
+Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
+gunicorn==20.0.4
 importlib-metadata==0.23
 itsdangerous==1.1.0
 Jinja2==2.10.1
