--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ Click==7.0
 Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Login==0.4.1
+Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
 Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
