--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,59 @@
+alabaster==0.7.12
 alembic==1.2.1
+astroid==2.3.3
 atomicwrites==1.3.0
 attrs==19.3.0
+Babel==2.7.0
+blinker==1.4
+certifi==2019.11.28
+chardet==3.0.4
 Click==7.0
+docutils==0.15.2
 Flask==1.1.1
 Flask-Admin==1.5.4
 Flask-Login==0.4.1
 Flask-Mail==0.9.1
 Flask-Migrate==2.5.2
-Flask-Script==2.0.6
 Flask-SQLAlchemy==2.4.0
 Flask-Testing==0.7.1
 Flask-WTF==0.14.2
 gunicorn==20.0.4
+idna==2.8
+imagesize==1.1.0
 importlib-metadata==0.23
+isort==4.3.21
 itsdangerous==1.1.0
 Jinja2==2.10.1
+lazy-object-proxy==1.4.3
 Mako==1.1.0
 MarkupSafe==1.1.1
+mccabe==0.6.1
 more-itertools==7.2.0
 packaging==19.2
 pluggy==0.13.0
-psycopg2==2.8.4
 py==1.8.0
+Pygments==2.5.2
+pylint==2.4.3
 pyparsing==2.4.2
 pytest==5.2.1
 python-dateutil==2.8.0
 python-editor==1.0.4
+pytz==2019.3
+requests==2.22.0
 six==1.12.0
+snowballstemmer==2.0.0
+Sphinx==2.2.2
+sphinxcontrib-applehelp==1.0.1
+sphinxcontrib-devhelp==1.0.1
+sphinxcontrib-htmlhelp==1.0.2
+sphinxcontrib-jsmath==1.0.1
+sphinxcontrib-qthelp==1.0.2
+sphinxcontrib-serializinghtml==1.1.3
 SQLAlchemy==1.3.8
+typed-ast==1.4.0
+urllib3==1.25.7
 wcwidth==0.1.7
 Werkzeug==0.15.6
+wrapt==1.11.2
 WTForms==2.2.1
 zipp==0.6.0
